fix multiselect spacing

--- a/packages/design-system/src/components/MultiSelectField/style.scss
+++ b/packages/design-system/src/components/MultiSelectField/style.scss
@@ -6,7 +6,8 @@ $base-class: 'multiselect';
   position: relative;
   width: inherit;
   color: $font-primary-color;
-  font-size: 14px;
+  font-size: 15px;
+  line-height: 1.2;
 
   &-head {
     position: relative;
@@ -56,14 +57,13 @@ $base-class: 'multiselect';
 
   &-head__search {
     display: block;
-    width: 5px;
-    margin: 5px 10px;
-    line-height: 1.3;
+    margin: 2px 3px;
     color: $font-primary-color;
     border: none;
     background-color: transparent;
     box-sizing: border-box;
     outline: none;
+    line-height: 1.2;
 
     ::placeholder,
     ::-webkit-input-placeholder,
@@ -182,9 +182,20 @@ $base-class: 'multiselect';
     visibility: visible;
   }
 
+  &-head__items-empty {
+    padding: 5px 12px;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    overflow-y: auto;
+    flex: 1;
+    opacity: 1;
+    visibility: visible;
+  }
+
   &__placeholder {
-    margin: 2px 3px;
-    line-height: 1.3;
+    margin: 3px 3px;
     opacity: 0.4;
     color: $font-primary-color;
   }
@@ -198,7 +209,7 @@ $base-class: 'multiselect';
     border-radius: 5px;
     padding: 2px 6px 4px 6px;
     line-height: normal;
-    margin: 3px 3px 1px 3px;
+    margin: 3px 3px 2px 3px;
     cursor: default;
     overflow: hidden;
     display: flex;
@@ -221,7 +232,7 @@ $base-class: 'multiselect';
 
   &__dropdown-icon {
     align-self: flex-start;
-    margin-top: 5px;
+    margin-top: 4px;
   }
 
   &--error {
